--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -25,12 +25,22 @@ jobs:
           python -m core.build_data
 
       - name: Commit if changed
+        id: commit
         run: |
           git config user.name "Syura_Krm"
           git config user.email "nextstageof@gmail.com"
+
           if [ -n "$(git status --porcelain)" ]; then
             git add data/*.json
             git commit -m "chore: update scraped data"
             git pull --rebase origin master
             git push
+            echo "committed=true" >> $GITHUB_OUTPUT
+          else
+            echo "committed=false" >> $GITHUB_OUTPUT
           fi
+
+      - name: Trigger Render Deploy
+        if: steps.commit.outputs.committed == 'true'
+        run: |
+          curl -X POST "${{ secrets.RENDER_DEPLOY_HOOK }}"
